--- a/FlaskApp1/templates/courses.html
+++ b/FlaskApp1/templates/courses.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>Course Offerings</h1>
-<h3>Term: Spring 2019</h3>
+<h3>Term: {{ term }}</h3>
 
 <div>
     <table class="table table-hover">
@@ -24,7 +24,18 @@
             <td>{{data["credits"] }}</td>
             <td>{{data["term"] }}</td>
             <td>
+<!--                <form action="{{ url_for('enrolment') }}" method="GET">-->
+<!--                    <input type="hidden" name="courseID" value="{{ data['courseID'] }}">-->
+<!--                    <input type="hidden" name="title" value="{{ data['title'] }}">-->
+<!--                    <input type="hidden" name="term" value="{{ data['term'] }}">-->
+<!--                <button>Enroll</button>-->
+<!--                </form>-->
+                <form action="{{ url_for('enrolment') }}" method="POST">
+                    <input type="hidden" name="courseID" value="{{ data['courseID'] }}">
+                    <input type="hidden" name="title" value="{{ data['title'] }}">
+                    <input type="hidden" name="term" value="{{ data['term'] }}">
                 <button>Enroll</button>
+                </form>
             </td>
         </tr>
         {% endfor %}
