--- a/FlaskApp1/templates/register.html
+++ b/FlaskApp1/templates/register.html
@@ -1,11 +1,11 @@
 
-    {% extends "layout.html" %}
+{% extends "layout.html" %}
    
-    {% block content %}
+{% block content %}
     <h2>New User Registration</h2>
 
     <div class="container">
-        <form name="register" action="register.php" method="get">
+        <form name="login" action="" method="post" novalidate>
         <fieldset class="form-group">
             <legend>{{title}}</legend>
             {{form.hidden_tag()}}
