--- a/FlaskApp1/templates/courses.html
+++ b/FlaskApp1/templates/courses.html
@@ -24,13 +24,7 @@
             <td>{{data["credits"] }}</td>
             <td>{{data["term"] }}</td>
             <td>
-<!--                <form action="{{ url_for('enrolment') }}" method="GET">-->
-<!--                    <input type="hidden" name="courseID" value="{{ data['courseID'] }}">-->
-<!--                    <input type="hidden" name="title" value="{{ data['title'] }}">-->
-<!--                    <input type="hidden" name="term" value="{{ data['term'] }}">-->
-<!--                <button>Enroll</button>-->
-<!--                </form>-->
-                <form action="{{ url_for('enrolment') }}" method="POST">
+                <form action="{{ url_for('enrolment') }}" method="GET">
                     <input type="hidden" name="courseID" value="{{ data['courseID'] }}">
                     <input type="hidden" name="title" value="{{ data['title'] }}">
                     <input type="hidden" name="term" value="{{ data['term'] }}">
