--- a/FlaskApp1/templates/enrolment.html
+++ b/FlaskApp1/templates/enrolment.html
@@ -3,10 +3,38 @@
     {% block content %}
     <div class="row">
         <div class="col-md-12 text-center">
-            <h1>You are enrolled in: </h1>
-                <p>Course ID: {{ data.id }}</p>
-                <p>Title: {{ data.title }}</p>
-                <p>Term: {{ data.term }}</p>
-        </div>
+            <h1>You are enroled in:</h1>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">Course ID</th>
+                <th scope="col">Title</th>
+                <th scope="col">Description</th>
+                <th scope="col">Credits</th>
+                <th scope="col">Term</th>
+                <th scope="col">Enroll</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for data in courseData %}
+            <tr>
+                <td scope='row'>{{data["courseID"] }}</td>
+                <td>{{data["title"] }}</td>
+                <td>{{data["description"] }}</td>
+                <td>{{data["credits"] }}</td>
+                <td>{{data["term"] }}</td>
+                <td>
+                    <form action="{{ url_for('enrolment') }}" method="GET">
+                        <input type="hidden" name="courseID" value="{{ data['courseID'] }}">
+                        <input type="hidden" name="title" value="{{ data['title'] }}">
+                        <input type="hidden" name="term" value="{{ data['term'] }}">
+                        <button>Enroll</button>
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
- {% endblock %}
+    </div>
+{% endblock %}
